
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:background="@drawable/dark"
    android:layout_height="match_parent">

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
...
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/white_rounde_rec"
        >

        <EditText
            android:id="@+id/ta_course_edit_text"
            style="@style/form_text"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <CheckBox
                android:id="@+id/checkBox"
                style="@style/form_text"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="TUTS" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/form_text"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="LABS" />

            <CheckBox
                android:id="@+id/checkBox3"
                style="@style/form_text"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="LECTURES" />

        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

...
                android:text="Courses taken this semester"
                android:layout_gravity="center_vertical"

                android:textSize="16sp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_course_fab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_white_24dp" />
        </LinearLayout>

        <Space
...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/clash_check_button"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_login"
                android:text="Get  Clash"
                android:textColor="#eeee" />
...
