...
                style="@style/form_text"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:text="Credits Completed" />

            <EditText
                android:id="@+id/su_credit_comp_editt"
                android:layout_width="108dp"
                android:layout_height="36dp"
                android:inputType="number" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="5dp"
            android:layout_weight="1"></Space>


        <RadioGroup
            android:id="@+id/mtech_btech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <RadioButton
                android:id="@+id/su_mtech_r_button"
                style="@style/form_text"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:text="M.Tech" />

            <RadioButton
                android:id="@+id/su_btech_r_button"
                style="@style/form_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                style="@style/form_text"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:text="Courses Completed" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/su_add_course_fab"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:paddingRight="5dp"
                android:src="@drawable/ic_add_white_24dp" />
        </LinearLayout>

...

            </LinearLayout>

        </ScrollView>
        <Button

            android:id="@+id/su_save"
            android:layout_marginRight="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login"
            android:text="Save"
            android:textColor="#eeeeee" />





...
