...
            android:layout_height="40dp"
            android:layout_weight="1" >
        </Space>


        <EditText
            android:id="@+id/su_email"
            style="@style/form_text"
            android:layout_width="242dp"
            android:layout_gravity="center_horizontal"
            android:hint="Email"
            android:selectAllOnFocus="false"
            android:singleLine="false"
...
        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="1" >
        </Space>
        <EditText
            android:id="@+id/su_password"
            style="@style/form_text"
            android:layout_width="242dp"
            android:layout_gravity="center_horizontal"
            android:hint="Password"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
...
        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="1" >
        </Space>
        <EditText
            android:id="@+id/su_password_confirm"
            style="@style/form_text"
            android:layout_width="242dp"
            android:layout_gravity="center_horizontal"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
...
            android:layout_height="20dp"
            android:layout_weight="1" >
        </Space>

        <Button

            android:id="@+id/su_next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login"
            android:text="Next"
            android:textColor="#eeeeee" />
        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="1" >
        </Space>
...
