...
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ubantu.coursaide_admin.MainActivity_MT17015">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewClash">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clashview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:gravity="center"
            android:text="Save Courses" />

        <TextView
...
